# sage

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS.md  README.md  ROADMAP.md  TEST_GUIDE.md  docker-compose.yml  install.ps1  install.sh  knowai.config.example  llms.txt  precept.config.example  pyproject.toml
.github/workflows/: docker.yml  pages.yml  publish.yml  purge-jsdelivr.yml  test.yml
agents/sage/: index.md
agents/sage/auth/: rules.md
agents/sage/commands/: index.md  sage-docs.md  sage-e2e-test.md  sage-flow.md  sage-grill.md  sage-learning.md  sage-n2n-test.md  sage-search-skill.md  sage-security-review.md  sage-setting.md  sage-unit-test.md  sage-update.md  sage-wayfinder.md  sage.md
agents/sage/docs/: docs-style-template.md  sage-docs.css  sage-docs.js
agents/sage/flows/: request-routing-wayfinder-flow.md  risk-controls-flow.md
agents/sage/notification/: rules.md
agents/sage/order/: rules.md
agents/sage/otp/: rules.md
agents/sage/payment/: rules.md
agents/sage/protocol/: context.md  index.md
agents/sage/roles/: role-architect.md  role-designer.md  role-dev.md  role-qa.md  role-writer.md
agents/sage/webhook/: rules.md
agents/sage/worker/: rules.md
assets/demo/: playground-demo.webm  render_gifs.py  with-precept.tape  without-precept.tape
assets/demo/scripts/: with-precept.sh  without-precept.sh
commands/: sage-learning.md
demo/transcripts/: ai-ecommerce-real.txt
docs/: 02_PROBLEMS.md  05_COGNITIVE_GRAPH.md  08_MCP_INTEGRATION.md  09_MULTI_REPO.md  10_UX_UI_COGNITION.md  14_USAGE_EXAMPLES.md  README.md  architecture.md  cli.md  cognition-packs.md  demo-storyboard.md  distributed-knowledge.md  git-sync.md  mcp.md  multi-repo.md  quickstart.md  request-routing-wayfinder.md  risk-controls.md  sage-architecture.html  usage-examples.md
integrations/: README.md  cline.md  cursor.mdc  gemini.md
integrations/.claude/commands/: sage-docs.md  sage-grill.md  sage-learning.md  sage-n2n-test.md  sage-search-skill.md  sage.md
integrations/.clinerules/: sage-docs.md  sage-flow.md  sage-security-review.md  sage-setting.md  sage-update.md  sage-wayfinder.md  sage.md
integrations/.codex/prompts/: sage-docs.md  sage-e2e-test.md  sage-grill.md  sage-unit-test.md
integrations/.cursor/rules/: sage-docs.mdc  sage-e2e-test.mdc  sage-flow.mdc  sage-grill.mdc  sage-learning.mdc  sage-n2n-test.mdc  sage-search-skill.mdc  sage-unit-test.mdc  sage-update.mdc  sage-wayfinder.mdc  sage.mdc
integrations/.github/instructions/: sage-docs.instructions.md  sage-e2e-test.instructions.md  sage-flow.instructions.md  sage-grill.instructions.md  sage-learning.instructions.md  sage-n2n-test.instructions.md  sage-search-skill.instructions.md  sage-security-review.instructions.md  sage-setting.instructions.md  sage-unit-test.instructions.md  sage-update.instructions.md  sage-wayfinder.instructions.md  sage.instructions.md
integrations/.windsurf/rules/: sage-docs.md  sage-learning.md  sage-security-review.md  sage-setting.md  sage.md
internal/: 01_THESIS.md  02_PROBLEMS.md  04_SCANNER.md  05_COGNITIVE_GRAPH.md  06_MEMORY.md  07_REASONING.md  10_UX_UI_COGNITION.md  11_STACK.md  12_ROADMAP.md  13_IMPLEMENTATION_GUIDE.md
landing/: CNAME  README.md  index.html
src/knowai/: __init__.py  __main__.py  audit.py  config.py  paths.py  registry.py
src/knowai/api/: main.py
src/knowai/approval/: queue.py
src/knowai/cache/: __init__.py  scan_cache.py
src/knowai/claude_commands/: knowai-generate.md  knowai.md
src/knowai/cli/: main.py
src/knowai/graph/: cognitive_graph.py  exporter.py
src/knowai/link/: __init__.py  config.py  resolver.py
src/knowai/mcp/: server.py
src/knowai/memory/: postgres_store.py  schema.py  store.py
src/knowai/packs/: builtin.py  schema.py
src/knowai/reasoning/: engine.py  impact_analyzer.py  intent_analyzer.py  risk_scorer.py
src/knowai/scanner/: _safe_walk.py  asset_detector.py  convention_detector.py  repo_scanner.py
src/knowai/skills/: __init__.py  loader.py
src/knowai/storage/: __init__.py  atomic.py
src/knowai/sync/: __init__.py  auto.py  git_sync.py
src/knowai/validation/: __init__.py  code_validator.py
src/knowai/web/: app.py
src/knowai/workspace/: config_loader.py  multi_scanner.py  schema.py
src/knowlyx/: audit.py  paths.py  registry.py
src/knowlyx/api/: main.py
src/knowlyx/approval/: queue.py
src/knowlyx/cache/: __init__.py  scan_cache.py
src/knowlyx/cli/: main.py
src/knowlyx/graph/: cognitive_graph.py
tests/: test_approval.py  test_approval_failsafe.py  test_cache.py  test_cli_commands.py  test_graph_exporter.py  test_link.py  test_memory.py  test_memory_v2.py  test_okf_store.py  test_packs.py  test_paths.py  test_reasoning.py  test_request_routing_protocol.py  test_risk_protocol.py  test_scanner.py  test_storage_atomic.py  test_sync.py  test_validator.py  test_workspace.py
tests/fixtures/: request_routing_cases.json
(+54 files in other folders)
