[project]
name = "knowlyx"
version = "0.2.0"
description = "Cognitive enforcement layer for AI software development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "mcp", "claude", "code-intelligence", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "fastmcp>=0.4.0",
    "networkx>=3.3",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "rich>=13.8.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.43",
]

[project.optional-dependencies]
vector = [
    "qdrant-client>=1.11.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "hatch>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/SatangBudsai/knowlyx"
Repository = "https://github.com/SatangBudsai/knowlyx"
Issues = "https://github.com/SatangBudsai/knowlyx/issues"

[project.scripts]
knowlyx = "knowlyx.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowlyx"]

[tool.hatch.version]
path = "src/knowlyx/__init__.py"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long — handled by formatter, prefer descriptive help strings
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
