[project]
name = "knowlyx"
version = "0.2.0"
description = "Cognitive enforcement layer for AI software development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "mcp", "claude", "code-intelligence", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "fastmcp>=0.4.0",
    "networkx>=3.3",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "rich>=13.8.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.43",
]

[project.optional-dependencies]
vector = [
    "qdrant-client>=1.11.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
]
web = [
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "hatch>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/qorstack/knowai"
Repository = "https://github.com/qorstack/knowai"
Issues = "https://github.com/qorstack/knowai/issues"

[project.scripts]
knowai = "knowlyx.cli.main:app"
knowlyx = "knowlyx.cli.main:app"  # legacy alias

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowlyx"]

[tool.hatch.build.targets.wheel.force-include]
"src/knowlyx/memory/sql/schema.sql" = "knowlyx/memory/sql/schema.sql"
"src/knowlyx/web/templates" = "knowlyx/web/templates"
"src/knowlyx/web/static" = "knowlyx/web/static"

[tool.hatch.version]
path = "src/knowlyx/__init__.py"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long — handled by formatter, prefer descriptive help strings
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
